feat: add debug overlay and control panel for enhanced debugging experience

--- a/public/popup.html
+++ b/public/popup.html
@@ -369,6 +369,18 @@
 
     <div class="divider"></div>
 
+    <!-- Debug -->
+    <div>
+      <div class="section-label">Developer</div>
+      <label class="check-row">
+        <input type="checkbox" id="checkDebugMode" />
+        <span class="check-box"></span>
+        <span class="check-label">Debug overlay (highlight detected elements)</span>
+      </label>
+    </div>
+
+    <div class="divider"></div>
+
     <!-- Test -->
     <button class="btn-test" id="btnTest">
       <span>▶</span> Test voice
